# CluelyGuard

./: .gitignore  Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  README.md  TO_BE_DONE.md  cluelyguard.service  demo.sh  docker-compose.yml  index.html  install.sh  integrate.md  test_detection.py  test_fixes.py
.github/workflows/: ci-cd.yml  ci.yml
bam/: bam.py  bam_model.joblib  collect_dataset.py  test_bam.py  test_collect_dataset.py  test_train.py  train.py
bam/bam/dataset/: ai_20250629_160323.json  human_20250629_162401.json
config/: default.yaml  example_custom.yaml
logs/: bam_20250629_151758.json  bam_20250629_165201.json  bam_20250629_165437.json  bam_20250629_185641.json  session_1751195872.json  session_1751196277.json  session_1751203602.json
src/: api.rs  api_server.rs  app.rs  config.rs  config_watcher.rs  correlation.rs  daemon.rs  events.rs  lib.rs  logger.rs  logging.rs  main.rs  network.rs  utils.rs
src/detection/: browser_extensions.rs  browser_tab_analyzer.rs  engine.rs  filesystem_monitor.rs  mod.rs  network_monitor.rs  process_monitor.rs  screen_monitor.rs  types.rs
src/gui/: dashboard_tab.rs  mod.rs  modules_tab.rs  tabs.rs
src/monitors/: audio.rs  bam_realtime.rs  browser.rs  coordinator.rs  fs_monitor.rs  mod.rs  network.rs  output_analysis.rs  process.rs  screensharing.rs  syscall_monitor.rs  user_activity.rs
