[package]
name = "cluely-guard"
version = "2.0.0"
edition = "2021"
authors = ["CluelyGuard Security <security@cluelyguard.com>"]
description = "Advanced Anti-LLM Detection System with GUI"
license = "MIT"
repository = "https://github.com/darkraider01/CluelyGuard"
keywords = ["security", "monitoring", "ai-detection", "proctoring"]
categories = ["gui", "security", "monitoring"]

[[bin]]
name = "cluely-guard"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# System Monitoring
sysinfo = "0.30"
procfs = "0.16"
netstat2 = "0.10"

# Network Monitoring
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = "0.23"
url = "2.4"

# File System Monitoring
notify = "6.1"
walkdir = "2.4"

# Configuration and Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# Logging and Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
open = "5.0.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"

# Browser Extension Detection
glob = "0.3"
json = "0.12"

# Screen Capture (optional)
screenshots = { version = "0.8", optional = true }
image = { version = "0.24", optional = true }

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "handleapi", "psapi", 
    "tlhelp32", "winnt", "winnls", "winbase"
] }
widestring = "1.0"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.5"

[features]
default = ["screen-monitoring"]
screen-monitoring = ["screenshots", "image"]
extended-detection = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
