[package]
name = "cluely-guard"
version = "3.0.0"
edition = "2021"
authors = ["CluelyGuard Security <security@cluelyguard.com>"]
description = "Advanced Real-Time Anti-LLM Detection System - 100% Working AI Anticheat"
license = "MIT"
repository = "https://github.com/darkraider01/CluelyGuard"
keywords = ["ai-detection", "anticheat", "security", "monitoring", "llm"]
categories = ["security", "monitoring", "gui"]

[[bin]]
name = "cluely-guard"
path = "src/main.rs"

[dependencies]
# Core GUI Framework (Fast, Native)
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Async Runtime for Real-time Performance
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "time"] }
futures = "0.3"
async-trait = "0.1"

# System Monitoring & Process Detection
sysinfo = "0.30"
procfs = { version = "0.16", optional = true }

# Network Monitoring & Deep Packet Inspection
netstat2 = "0.10.1"
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.4"

# File System Monitoring
notify = "6.1"
walkdir = "2.4"

# Configuration & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
open = "5.0"

# Utilities & Data Processing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"

# Browser Extension Analysis
glob = "0.3"
json = "0.12"

# Optional Advanced Features
screenshots = { version = "0.8", optional = true }
image = { version = "0.24", optional = true }
rdev = { version = "0.4", optional = true }  # Keyboard/mouse monitoring

# Cross-platform System APIs
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "handleapi", "psapi", 
    "tlhelp32", "winnt", "winnls", "winbase", "winsock2",

] }
widestring = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = ["image"]
full = ["procfs", "screenshots", "image", "rdev", "screen-monitoring"]
screen-monitoring = ["screenshots", "image", "rdev"]
