[package]
name = "cluely-guard"
version = "4.0.0"
edition = "2021"
authors = ["CluelyGuard Security <security@cluelyguard.com>"]
description = "Advanced Full-Stack Real-Time Anti-LLM Detection System - Complete Enterprise Solution"
license = "MIT"
repository = "https://github.com/darkraider01/CluelyGuard"
keywords = ["ai-detection", "anticheat", "security", "monitoring", "llm", "fullstack", "enterprise"]
categories = ["security", "monitoring", "gui", "web-programming", "database"]
readme = "README.md"
homepage = "https://cluelyguard.com"
documentation = "https://docs.cluelyguard.com"

[[bin]]
name = "cluely-guard"
path = "src/main.rs"


[dependencies]
# Core GUI Framework (Fast, Native)
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Web Server Framework for Full-Stack API
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true }
hyper = { version = "1.0", optional = true }

# Async Runtime for Real-time Performance
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database Layer - SQLite + PostgreSQL Support
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", 
    "sqlite", 
    "postgres", 
    "chrono", 
    "uuid", 
    "json",
    "migrate"
] }

# System Monitoring & Process Detection
sysinfo = "0.30"

# Network Monitoring & Deep Packet Inspection
netstat2 = "0.10.1"
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
url = "2.4"

# File System Monitoring
notify = "6.1"
walkdir = "2.4"

# WebSocket Support for Real-time Updates
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# Configuration & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
open = "5.0"

# Utilities & Data Processing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"

# Browser Extension Analysis
glob = "0.3"
json = "0.12"

# Image processing for icon
image = "0.24"

# Metrics and Monitoring
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Authentication and Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Command Line Interface
clap = { version = "4.4", features = ["derive", "env"] }

# Optional Advanced Features
screenshots = { version = "0.8", optional = true }
rdev = { version = "0.4", optional = true }

# Email notifications
lettre = { version = "0.11", optional = true }

# Cross-platform System APIs
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "processthreadsapi", "handleapi", "psapi", 
    "tlhelp32", "winnt", "winnls", "winbase", "winsock2",
] }
widestring = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
# Testing Framework
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rstest = "0.18"

# Web Testing
reqwest = { version = "0.11", features = ["json"] }
fantoccini = "0.20"

# Performance Testing
mimalloc = "0.1"

# Mock and Test Utilities
mockall = "0.11"
serial_test = "3.0"

[features]
default = ["enhanced-detection", "web-server"]
enhanced-detection = ["screen-monitoring", "email-notifications"]
screen-monitoring = ["screenshots", "rdev"]
email-notifications = ["lettre"]
web-server = ["axum", "tower", "tower-http", "hyper"]
enterprise = ["web-server", "enhanced-detection", "email-notifications"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
debug = true
incremental = true

[profile.test]
opt-level = 1
debug = 2

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
incremental = false
codegen-units = 1



